| Bug #8350 | Limiting Account Resources does not work | ||
|---|---|---|---|
| Submitted: | 7 Feb 2005 2:39 | Modified: | 27 Mar 2005 17:11 |
| Reporter: | Christian Hammers (Silver Quality Contributor) (SCA) | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.0.22 | OS: | |
| Assigned to: | Jim Winstead | Target Version: | |
[7 Feb 2005 2:39]
Christian Hammers
[7 Feb 2005 14:35]
dennis bertani
Same here with max queries per hour limit OS: Red Hat Enterprise server 3 Release: 4.0.23 (binary rpms)
[7 Feb 2005 15:10]
Victoria Reznichenko
Verified with 4.0.24-debug-log
[9 Feb 2005 3:52]
Jim Winstead
The per-hour connection limit counter was never being reset, so it was acting effectively as a hard per-user connection limit.
[23 Feb 2005 1:52]
Jim Winstead
Fix pushed, will be in 4.1.11.
[23 Feb 2005 14:59]
Paul DuBois
Noted in 4.1.11 changelog.
[27 Mar 2005 17:05]
Christian Hammers
Forwarding from http://bugs.debian.org/285044 from "Rene Konasz" <oe4@gmx.at>: Please comment. ----------------------------------------- thank you for forwarding my report to upstream, after upgrading to mysql-server 4.0.24-2 MAX_QUERIES_PER_HOUR and MAX_UPDATES_PER_HOUR work as expected and both reset after an hour, but MAX_CONNECTIONS_PER_HOUR still does not reset even after a couple of hours. I have no problem with this as the both working limits are enough for my purposes. I also found no remark in the mysql.com changelog for 4.0.24 (and 4.0.25 yet) mentioning a change concerning the limits, seems this has only been fixed in 4.1.11. --------------------------------------------
[27 Mar 2005 17:11]
Jim Winstead
Because this was not deemed a critical bug, this was only fixed in the 4.1 (and later) branch. The patch was originally prepared against 4.0, however, and can be downloaded from http://lists.mysql.com/internals/21679
