Fix per-hour user connection limits by making sure that the number of connections is actually reset after an hour, and also fix (unlikely) conditions under which the per-hour query and connection limits could be exceeded. (Bug #8350)